[project]
name = "Kasumi"
description = "Another ASGI Web framework."
authors = [
    {name = "AmaseCocoa", email = "amase.cocoa@gmail.com"},
]
dependencies = [
    "starlette>=0.37.2",
    "typer>=0.12.3",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
    "cowsay>=6.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

[project.optional-dependencies]
asgi_dev = [
    "uvicorn[standard]>=0.30.1",
]
test = [
    "pytest>=8.2.2",
    "ruff>=0.4.8",
]

[project.scripts]
kasumi = "kasumi.cli.__core:app"

[project.urls]
# documentation = "https://kasumi.readthedocs.io/"
repository = "https://github.com/AmaseCocoa/Kasumi/"

[tool.pdm.version]
source = "scm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
